--- a/src/day_one.tex
+++ b/src/day_one.tex
@@ -1,43 +1,24 @@
 \section{Monday, May 6th, 2024}\label{sec:day1}
 
-\subsection[09:00-09:50 Ethical Implications of Artificial Intelligence]{Ethical Implications of Artificial Intelligence}\label{subsec:session1}
-\Room{A107-109} \\
-\Time{09:00-09:50}
-
-\subsection[09:50-10:30: Expo Hall Break]{Expo Hall Break}\label{subsec:breakd1b1}
-\Room{Hall C} \\
-\Time{09:50-10:30}
-
-\subsection[10:45-11:45: Driesnote]{Driesnote}\label{subsec:driesnote}
-\Room{Lobby C} \\
-\Time{10:45-11:45}
-
-\subsection[11:45-12:00: Group Photo]{Group Photo}\label{subsec:groupphoto}
-\Room{Hall C} \\
-\Time{11:45-12:00}
-
-\subsection[12:00-13:00: Lunch]{Lunch}\label{subsec:lunchd1}
-\Room{Hall C} \\
-\Time{12:00-13:00}
-
-\subsection[13:05-13:15: Lighning Talk 5 new free things you get from CKEditor 5 Plugin Pack]{Lightning Talk: 5 new free things you get from CKEditor 5 Plugin Pack}\label{subsec:lightning1}
-\Room{Hall C} \\
-\Time{13:05-13:15}
-
-\subsection[13:30-14:20: Higher Ed Rebrand or Revamp: Pushing the Envelope Within Your Design System]{Higher Ed Rebrand or Revamp: Pushing the Envelope Within Your Design System}\label{subsec:session2}
-\Room{C120-122} \\
-\Time{13:30-14:20}
-
-\subsection[14:20-15:00 Expo Hall break]{Expo Hall Break}\label{subsec:breakd1b2}
-\Room{Hall C} \\
-\Time{14:20-15:00}
-
-\subsection[15:00-15:50: Collaborative Editing in Drupal Core]{Collaborative Editing in Drupal Core}\label{subsec:session3}
-\Room{A106} \\
-\Time{15:00-15:50}
-
-\subsection[16:10-17:00: Composable: Discovering Drupal’s next-gen way to structure content]{Composable: Discovering Drupal’s next-gen way to structure content}\label{subsec:session4}
-\Room{B117-119} \\
-\Time{16:10-17:00}
+\begin{tblr}{
+    width=0.8\linewidth,
+    colspec = {|Q[l,font=\bfseries,wd=.15\linewidth]|Q[l,wd=.15\linewidth]|Q[l,.4\linewidth]|Q[l,wd=.18\linewidth]|},
+    row{1} = {font=\bfseries}
+}
+    \toprule
+    Date                                    & Location & Title                                                                       & Track                                    \\
+    \midrule
+    09:00-09:50                             & A107-109 & Ethical Implications of Artificial Intelligence                             & leadership, management \& business       \\ \hline
+    \SetRow{bg=azure4,fg=white} 09:50-10:30 & Hall C   & \SetCell[c=2]{c} Expo Hall Break                                            &                                          \\ \hline
+    \SetRow{bg=blue3,fg=white} 10:45-11:45  & Hall C   & \SetCell[c=2]{c} Driesnote                                                  &                                          \\ \hline
+    \SetRow{bg=blue3,fg=white} 11:45-12:00  & Hall C   & \SetCell[c=2]{c} Group Photo                                                &                                          \\ \hline
+    \SetRow{bg=cyan3,fg=white} 12:00-13:00  & Hall C   & \SetCell[c=2]{c} Lunch                                                      &                                          \\ \hline
+    13:05-13:15                             & Hall C   & Lighning Talk 5 new free things you get from CKEditor 5 Plugin Pack         & development \& coding                    \\ \hline
+    13:30-14:20                             & C120-122 & Higher Ed Rebrand or Revamp: Pushing the Envelope Within Your Design System                                     & user experience, accessibility \& design                                 \\ \hline
+    \SetRow{bg=azure4,fg=white} 14:20-15:00 & Hall C   & \SetCell[c=2]{c} Expo Hall Break                                            &                                          \\ \hline
+    15:00-15:50                             & A106     & Collaborative Editing in Drupal Core                                        & development \& coding                    \\ \hline
+    16:10-17:00                             & B117-119 & Composable: Discovering Drupal’s next-gen way to structure content          & site building                            \\
+    \bottomrule
+\end{tblr}
 
 \newpage
