--- a/src/day_two.tex
+++ b/src/day_two.tex
@@ -1,27 +1,22 @@
 \section{Tuesday, May 7th, 2024}\label{sec:day2}
 
-\subsection[10:00-11:00:Keynote: Open Source AI Now: Why Open Must Win the AI War]{Keynote: Open Source AI Now: Why Open Must Win the AI War}\label{subsec:keynote1}
-\Room{201-203 Oregon Ballroom}
-
-\subsection[11:30-12:20: Elevate Your Approval Processes: Mastering Complex Workflows]{Elevate Your Approval Processes: Mastering Complex Workflows}\label{subsec:session5}
-\Room{A106}
-
-\subsection[12:20-13:20: Lunch]{Lunch}\label{subsec:lunchd2}
-\Room{Hall C}
-
-\subsection[13:20-13:50: Expo Hall Break]{Expo Hall Break}\label{subsec:breakd2b1}
-\Room{Hall C}
-
-\subsection[13:50-14:40: Promoting accessible content throughout the publishing lifecycle]{Promoting accessible content throughout the publishing lifecycle}\label{subsec:session6}
-\Room{B110-112}
-
-\subsection[14:40-15:00: Expo Hall Break]{Expo Hall Break}\label{subsec:breakd2b2}
-\Room{Hall C}
-
-\subsection[15:00-15:50: Edit Together: Collaborative Editing for Everyone]{Edit Together: Collaborative Editing for Everyone}\label{subsec:session7}
-\Room{C120-122}
-
-\subsection[16:10-1700: Revolutionizing Drupal with Automated Performance Testing: Deep Dive into Gander, the New Framework]{Revolutionizing Drupal with Automated Performance Testing: Deep Dive into Gander, the New Framework}\label{subsec:session8}
-\Room{B117-119}
+\begin{tblr}{
+    width=0.8\linewidth,
+    colspec = {|Q[l,font=\bfseries,wd=.15\linewidth]|Q[l,wd=.15\linewidth]|Q[l,wd=.4\linewidth]|Q[l,wd=.18\linewidth]|},
+    row{1} = {font=\bfseries}
+}
+    \toprule
+    Date                                    & Location                & Title                                                                                               & Track                 \\
+    \midrule
+    \SetRow{bg=blue3,fg=white} 10:00-11:00  & 201-203 Oregon Ballroom & \SetCell[c=2]{c,wd=.6\linewidth} Keynote: Open Source AI Now: Why Open Must Win the AI War                             &        \\ \hline
+    11:30-12:20                             & A106                    & Elevate Your Approval Processes: Mastering Complex Workflows                                        & development \& coding \\ \hline
+    \SetRow{bg=cyan3,fg=white} 12:20-13:20  & Hall C                  & \SetCell[c=2]{c} Lunch                                                                              &                       \\ \hline
+    \SetRow{bg=azure4,fg=white} 13:20-13:50 & Hall C                  & \SetCell[c=2]{c} Expo Hall Break                                                                    &                       \\ \hline
+    13:50-14:40                             & B110-112                & Promoting accessible content throughout the publishing lifecycle            & content \& marketing                    \\ \hline
+    \SetRow{bg=azure4,fg=white} 14:40-15:00 & Hall C                  & \SetCell[c=2]{c} Expo Hall Break                                                                    &                       \\ \hline
+    15:00-15:50                             & C120-122                & Edit Together: Collaborative Editing for Everyone                                                   & drupal showcase       \\ \hline
+    16:10-17:00                             & B117-119                & Revolutionizing Drupal with Automated Performance Testing: Deep Dive into Gander, the New Framework          & development \& coding                             \\
+    \bottomrule
+\end{tblr}
 
 \newpage
