Changing from a4paper to letter paper

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 %! Date = 4/30/24
 
 % Preamble
-\documentclass[12pt, a4paper, draft]{article}
+\documentclass[12pt, letterpaper, draft]{article}
 
 % Packages
 \usepackage[margin=2.5cm]{geometry} % Adjust page margins if needed
